// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerSatisfaction should check hover and unhover 1`] = `
<DocumentFragment>
  .cache-1cjs2t5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-1cjs2t5 ehpbis70"
    data-testid="customer-satisfaction"
  >
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="customer-satisfaction-1"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="customer-satisfaction-2"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="customer-satisfaction-3"
    />
    <test-file-stub
      classname="cache-mgs8d6-StyledImage-scaled-StyledImage epmg9lb0"
      data-testid="customer-satisfaction-4"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="customer-satisfaction-5"
    />
  </div>
</DocumentFragment>
`;

exports[`CustomerSatisfaction should work with parameters 1`] = `
<DocumentFragment>
  .cache-1cjs2t5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-1cjs2t5 ehpbis70"
  >
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="undefined-1"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="undefined-2"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="undefined-3"
    />
    <test-file-stub
      classname="cache-mgs8d6-StyledImage-scaled-StyledImage epmg9lb0"
      data-testid="undefined-4"
    />
    <test-file-stub
      classname="cache-1jqxlqq-StyledImage-scaled epmg9lb0"
      data-testid="undefined-5"
    />
  </div>
</DocumentFragment>
`;
